--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -120,7 +120,7 @@
 					$('#ImageDisplay > img').attr("src", e.target.result);
 				}
 				reader.readAsDataURL($('#file-input')[0].files[0]);
-				$('#hidden-until-image').show();
+				//$('#hidden-until-image').show();
 
 			} else {
 				alert("This browser does not support FileReader.");
